# tess_tpf_webapp

./: .gitignore  Playground.ipynb  README.md  pyproject.toml
.github/: dependabot.yml
bokeh_trial/: Dockerfile  bokeh_updates_from_unlocked_cb.py  requirements.txt
psutil_trial/: Dockerfile  requirements.txt
psutil_trial/trial/: app_hooks.py  main.py
redirect_webapp/: .dockerignore  Dockerfile  README.md  assemble.sh  main.py  requirements.txt
src/: README.md  requirements.txt
src/tpf/: __init__.py  app_hooks.py  bokeh_cli.py  ext_gaia_tic.py  lc_utils.py  main.py  resource_logger.py  tpf_utils.py
src/tpf/gcloud/: .dockerignore  Dockerfile  README.md  assemble.sh  cloudbuild.yaml  requirements.txt
src/tpf/gcloud/custom_astropy_config/astropy/: astroquery.cfg
src/tpf/lk_patch/: asyncio_compat.py  interact.py  timed.py
src/tpf/lk_patch/interact_sky_providers/: __init__.py  core.py  gaia_tic.py  skypatrol2.py  vizier.py  vsx.py  ztf.py
